--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,27 +14,63 @@ jobs:
       name: Check out code
     - name: handle-list
       run: |
+        # 删除issue模板文件前的元信息
+        cat .github/ISSUE_TEMPLATE/create_offersku.md > template.md
+        deleteRow=$(grep -n "\-\-\-" template.md | cut -d ":" -f 1 | sed -n '2p')
+        for ((index=0;index<$deleteRow;index++));do
+          sed -i '1d' template.md
+        done
+    
+        # 创建milestone
+        milestone=$(cat offersku.json | jq '.mailstone')
+        allMilestones=$(curl \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{github.token}}"\
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/${{github.repository_owner}}/manufacture/milestones | jq  '.[] | .title')        
+        createFlag="true"
+        for item in $allMilestones;do
+          if [[ $item == $milestone ]];then
+            createFlag="false"
+            break
+          fi 
+        done
+        if [[ $createFlag == "true" ]];then
+          curl \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{github.token}}"\
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/${{github.repository_owner}}/manufacture/milestones \
+            -d '{"title":'$milestone',"state":"open"}'
+        fi
+        
+        length=$(echo $list | jq '.|length')  
+        list=$(jq "[.task[] | {appname:.appname,version:.version[],distribution:.distribution[],platform:.platform[],os:.os[],assignees:.assignees}]" offersku.json)
+        length=$(echo $list | jq '.|length')
         project_id=$(curl --request POST \
           --url https://api.github.com/graphql \
           --header 'Authorization: Bearer ${{ secrets.ACCESS_PROJECT }}' \
           --data '{"query":"query{user(login: \"${{github.repository_owner}}\") {projectV2(number: 2){id}}}"}' | jq -r .data.user.projectV2.id)
-        echo $project_id
-        field_id=$(curl --request POST \
-          --url https://api.github.com/graphql \
-          --header 'Authorization: Bearer ${{ secrets.ACCESS_PROJECT }}' \
-          --data '{"query":"query{ node(id: \"'$project_id'\") { ... on ProjectV2 { fields(first: 20) { nodes { ... on ProjectV2Field { id name } ... on ProjectV2IterationField { id name configuration { iterations { startDate id }}} ... on ProjectV2SingleSelectField { id name options { id name }}}}}}}"}')
-        echo $field_id
-        status_id=$(echo $field_id | jq -r '.data.node.fields.nodes[2].id')
-        echo $status_id
-        produce_id=$(echo $field_id | jq -r '.data.node.fields.nodes[2].options[1].id')
-        echo $produce_id
-        issue_id=$(curl \
+
+        # 创建issue
+        for ((index=0;index<$length;index++));do
+          appname=$(echo $list | jq -r ".[$index].appname")
+          version=$(echo $list | jq -r ".[$index].version")
+          distribution=$(echo $list | jq -r ".[$index].distribution")
+          platform=$(echo $list | jq -r ".[$index].platform")
+          os=$(echo $list | jq -r ".[$index].os")
+          assignee=$(echo $list | jq -r ".[$index].assignees")
+          stone=$(echo $milestone | sed 's/\"//g')
+          issue_number=$(gh issue create --assignee $assignee --title "$appname$version $distribution on $os on $platform" --body-file template.md --milestone $stone | awk -F "/" '{print $NF}')
+          # 关联project
+          issue_id=$(curl \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{github.token}}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/${{github.repository_owner}}/manufacture/issues/19 | jq -r .node_id)
-        echo $issue_id
-        curl --request POST \
-          --url https://api.github.com/graphql \
-          --header 'Authorization: Bearer ${{ secrets.ACCESS_PROJECT }}' \
-          --data '{"query":"mutation {updateProjectV2ItemFieldValue( input: { projectId: \"'$project_id'\" itemId: \"'$issue_id'\" fieldId: \"'$status_id'\" value: { singleSelectOptionId: \"'$produce_id'\" }}) { projectV2Item { id }}}"}'
+            https://api.github.com/repos/${{github.repository_owner}}/manufacture/issues/$issue_number | jq -r .node_id)
+          curl --request POST \
+            --url https://api.github.com/graphql \
+            --header 'Authorization: Bearer ${{ secrets.ACCESS_PROJECT }}' \
+            --data '{"query":"mutation {addProjectV2ItemById(input: {projectId: \"'$project_id'\" contentId: \"'$issue_id'\"}) {item {id}}}"}'
+        done
